--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section>
         <!-- Card 1 - start -->
         <div>
-            <img src=“” alt=“”>
+            <img src="images/avatar_01.png" alt=“”>
             <h3>heading 3</h3>
             <p>paragraph</p>
             <img src=“” alt=“avatar”>
