--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <section>
         <!-- Card 1 - start -->
         <div>
-            <img src="images/avatar_01.png" alt=“”>
+            <img src="" alt=“”>
             <h3>heading 3</h3>
             <p>paragraph</p>
-            <img src=“” alt=“avatar”>
+            <img src=“images/avatar_01.png” alt=“avatar”>
             <p>author name</p>
         </div>
         <!-- Card 1 - end -->
