--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <!-- Header - end -->
     <!-- Hero - start -->
-    <section>
+    <section style="background-color:darkkhaki;">
         <h1>Heading 1</h1>
         <h3>Heading 3</h3>
         Call to Action
@@ -36,7 +36,7 @@
             <img src="" alt=“”>
             <h3>heading 3</h3>
             <p>paragraph</p>
-            <img src=“images/avatar_01.png” alt=“avatar”>
+            <img src="images/avatar_01.png" alt=“avatar”>
             <p>author name</p>
         </div>
         <!-- Card 1 - end -->
