--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name=“keywords” content=“UXUI, Ironhack, Design Principles”>
     <meta name=“author” content=“Juno Jo”>
     <title>Juno’s Page</title>
+
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- Header - start -->
