--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -10,3 +10,32 @@
     <title>My Landing Page</title>
     <!-- Style CSS -->
     <link rel="stylesheet" href="css/style.css">
+
+    </head>
+
+    <body>
+        <!-- Header - start -->
+
+        <!-- Header - end -->
+
+        <!-- Hero - start -->
+        <section id="hero">
+            <div>
+                <h1>Heading 1</h1>
+                <h3>Heading 3</h3>
+            </div>
+            <div>
+                <a href="#" class="cta-button"><i class="ri-shopping-cart-2-fill ri-lg"></i> Call to Action</a>
+            </div>
+        </section>
+        <!-- Hero - end -->
+
+
+
+
+
+
+
+    </body>
+    </html>
+    
