--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -11,12 +11,28 @@
     <!-- Style CSS -->
     <link rel="stylesheet" href="css/style.css">
 
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;700&display=swap" rel="stylesheet">
+
     </head>
 
     <body>
-        <!-- Header - start -->
-
-        <!-- Header - end -->
+    <!-- Header - start -->
+    <header class="container">
+        <img src="https://www.ironhack.com/assets/icons/ironhack_logos/logo.svg" alt="Juno’s Logo">
+        <form action="#">
+            <input type="search">
+            <input type="submit" value="Find">
+        </form>
+        <nav>
+            <a href="#">About</a>
+            <a href="#">Products</a>
+            <a href="#">Testimonials</a>
+            <a href="#contact">Contact</a>
+            <a href="#" class="cv-button"><i class="ri-file-download-line ri-1x"></i> Download CV</a>
+        </nav>
+    </header>
 
         <!-- Hero - start -->
         <section id="hero">
