--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -38,7 +38,7 @@
         <section id="hero">
             <div>
                 <h1>Heading 1</h1>
-                <h3>Heading 3</h3>
+                <h3>Helllllo</h3>
             </div>
             <div>
                 <a href="#" class="cta-button"><i class="ri-shopping-cart-2-fill ri-lg"></i> Call to Action</a>
