--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -20,7 +20,7 @@
     <body>
     <!-- Header - start -->
     <header class="container">
-        <img src="https://www.ironhack.com/assets/icons/ironhack_logos/logo.svg" alt="Juno’s Logo">
+        <img src="img/logo.svg" alt="store logo">
         <form action="#">
             <input type="search">
             <input type="submit" value="Find">
