--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -13,7 +13,7 @@
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;400;700&display=swap" rel="stylesheet">
 
     </head>
 
@@ -23,14 +23,12 @@
         <img src="img/logo.svg" alt="store logo">
         <form action="#">
             <input type="search">
-            <input type="submit" value="Find">
         </form>
         <nav>
             <a href="#">About</a>
             <a href="#">Products</a>
             <a href="#">Testimonials</a>
             <a href="#contact">Contact</a>
-            <a href="#" class="cv-button"><i class="ri-file-download-line ri-1x"></i> Download CV</a>
         </nav>
     </header>
 
