--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -44,6 +44,21 @@
         </section>
         <!-- Hero - end -->
 
+        <section id="articles" class="container">
+            <!-- Card 1 - start -->
+            <div class="card">
+                <div class="img-holder">
+                    <img src="img/jon-tyson-pEGyLHAPfVw-unsplash.jpg" alt="" class="img-card">
+                </div>
+                <h5>heading 5</h5>
+                <p>paragraph</p>
+                <div class="container author-card">
+                    <img src="img/avatar_02.png" alt="avatar" class="author-photo">
+                    <p>author name</p>
+                </div>
+            </div>
+            <!-- Card 1 - end -->
+
 
 
 
