--- a/glint-master/index.html
+++ b/glint-master/index.html
@@ -44,7 +44,7 @@
 
         <div class="header-logo">
             <a class="site-logo" href="index.html">
-                <img src="images/logo.png" alt="Homepage">
+                <img src="images/monogram.svg" alt="Homepage">
             </a>
         </div>
 
@@ -89,7 +89,7 @@
         </nav>  <!-- end header-nav -->
 
         <a class="header-menu-toggle" href="#0">
-            <span class="header-menu-text">Menu</span>
+            <!--<span class="header-menu-text">Menu</span>-->
             <span class="header-menu-icon"></span>
         </a>
 
@@ -106,14 +106,10 @@
         <div class="home-content">
 
             <div class="row home-content__main">
-
-                <h3>Welcome to Glint</h3>
-
+                
                 <h1>
-                    We are a creative group <br>
-                    of people who design <br>
-                    influential brands and <br>
-                    digital experiences.
+                    Albert Burks IV<br>
+                    UX/UI Designer
                 </h1>
 
                 <div class="home-content__buttons">
