--- a/glint-master/index.html
+++ b/glint-master/index.html
@@ -123,11 +123,11 @@
 
             </div>
 
-            <div class="home-content__scroll">
+            <!--<div class="home-content__scroll">
                 <a href="#about" class="scroll-link smoothscroll">
                     <span>Scroll Down</span>
                 </a>
-            </div>
+            </div>-->
 
             <div class="home-content__line"></div>
 
