--- a/glint-master/index.html
+++ b/glint-master/index.html
@@ -59,7 +59,7 @@
                     <!--<li class="current"><a class="smoothscroll"  href="#home" title="home">Home</a></li>-->
                     <li><a class="smoothscroll"  href="#about" title="about">About</a></li>
                     <!--<li><a class="smoothscroll"  href="#services" title="services">Services</a></li>-->
-                    <li><a class="smoothscroll"  href="#works" title="works">Works</a></li>
+                    <li><a class="smoothscroll"  href="#works" title="works">Case Studies</a></li>
                     <!--<li><a class="smoothscroll"  href="#clients" title="clients">Clients</a></li>-->
                     <li><a class="smoothscroll"  href="#contact" title="contact">Contact</a></li>
                 </ul>
@@ -309,8 +309,7 @@
                 
             <div class="row section-header has-bottom-sep light-sep" data-aos="fade-up">
                 <div class="col-full">
-                    <h3 class="subhead">Recent Works</h3>
-                    <h1 class="display-2 display-2--light">We love what we do, check out some of our latest works</h1>
+                    <h1 class="display-2 display-2--light">Case Studies</h1>
                 </div>
             </div> <!-- end section-header -->
 
