--- a/glint-master/index.html
+++ b/glint-master/index.html
@@ -10,7 +10,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Glint</title>
+    <title>Albert Burks IV | UX/UI Designer</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -108,7 +108,7 @@
             <div class="row home-content__main">
                 
                 <h1 class="myname">
-                    Albert <br>Burks
+                    Albert <br>Burks IV
                 </h1>
                 <h2>UX/UI Designer</h2>
 
