--- a/glint-master/index.html
+++ b/glint-master/index.html
@@ -139,10 +139,13 @@
                 <a href="#0"><i class="fa fa-facebook" aria-hidden="true"></i><span>Facebook</span></a>
             </li>-->
             <li>
-                <a href="https://twitter.com/aburksart"><i class="fa fa-twitter" aria-hidden="true"></i><span>Twiiter</span></a>
+                <a href="https://twitter.com/aburksart" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i><span>Twiiter</span></a>
             </li>
             <li>
-                <a href="https://www.instagram.com/aburksart/"><i class="fa fa-instagram" aria-hidden="true"></i><span>Instagram</span></a>
+                <a href="https://www.instagram.com/aburksart/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i><span>Instagram</span></a>
+            </li>
+            <li>
+                <a href="https://aburksart.medium.com/" target="_blank"><i class="fa fa-medium" aria-hidden="true"></i><span>Medium</span></a>
             </li>
             <!--<li>
                 <a href="#0"><i class="fa fa-behance" aria-hidden="true"></i><span>Behance</span></a>
@@ -660,8 +663,7 @@
 
             <div class="col-twelve">
                 <div class="copyright">
-                    <span>© Copyright Glint 2017</span> 
-                    <span>Site Template by <a href="https://www.colorlib.com/">Colorlib</a></span>	
+                    <span>&copy; Copyright Albert Burks IV <script>document.write(new Date().getFullYear())</script></span> 
                 </div>
 
                 <div class="go-top">
